--- a/src/app/sign-in/pages/sign-in.component.html
+++ b/src/app/sign-in/pages/sign-in.component.html
@@ -30,5 +30,5 @@
   </div>
   <button type="submit" class="btn">Sign In</button>
   <p>Forgot password? <a href="">Click here</a></p>
-  <p>Don't have an account? <a href="">Sign up</a></p>
+  <p>Don't have an account? <a routerLink="/sign-up">Sign up</a></p>
 </form>
