--- a/src/app/sign-up/pages/sign-up.component.html
+++ b/src/app/sign-up/pages/sign-up.component.html
@@ -1,1 +1,109 @@
-<p>sign-up works!</p>
+<form class="signup-form" [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
+  <h3>sign up</h3>
+  <div class="form-row">
+    <div class="form-group">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Username</mat-label>
+        <input
+          type="text"
+          matInput
+          placeholder=" "
+          formControlName="username"
+          class="form-input"
+        />
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Password</mat-label>
+        <input
+          [type]="hide ? 'password' : 'text'"
+          matInput
+          placeholder=" "
+          formControlName="password"
+        />
+        <mat-icon matSuffix (click)="hide = !hide">{{
+          hide ? "visibility_off" : "visibility"
+        }}</mat-icon>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>First name</mat-label>
+        <input
+          type="text"
+          matInput
+          placeholder=" "
+          formControlName="firstName"
+          class="form-input"
+        />
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Last name</mat-label>
+        <input
+          type="text"
+          matInput
+          placeholder=" "
+          formControlName="lastName"
+          class="form-input"
+        />
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Birthday</mat-label>
+        <input
+          type="date"
+          matInput
+          placeholder=" "
+          formControlName="birthday"
+          class="form-input"
+        />
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <div class="input-radio">
+        <label>Gender</label>
+        <mat-radio-group formControlName="gender">
+          <mat-radio-button value="Male" [checked]="true"
+            >Male</mat-radio-button
+          >
+          <mat-radio-button value="Female">Female</mat-radio-button>
+        </mat-radio-group>
+      </div>
+    </div>
+  </div>
+
+  <mat-form-field class="form-field" appearance="outline">
+    <mat-label>Email</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder=" "
+      formControlName="email"
+      class="form-input"
+    />
+  </mat-form-field>
+
+  <mat-form-field class="form-field" appearance="outline">
+    <mat-label>Phone</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder=" "
+      formControlName="phone"
+      class="form-input"
+    />
+  </mat-form-field>
+
+  <button type="submit" class="btn">Sign Up</button>
+  <p>Already a member? <a routerLink="/sign-in">Sign in</a></p>
+</form>
