--- a/src/app/sign-up/pages/sign-up.component.html
+++ b/src/app/sign-up/pages/sign-up.component.html
@@ -1,4 +1,8 @@
-<form class="signup-form" [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
+<form
+  class="mat-typography signup-form"
+  [formGroup]="signUpForm"
+  (ngSubmit)="onSignUp()"
+>
   <h3>sign up</h3>
   <div class="form-row">
     <div class="form-group">
