--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,10 +28,10 @@
     >
   </nav>
   <div class="icons">
-    <div class="fas fa-bars" id="menu-btn" appActiveEffect></div>
-    <div class="fas fa-search" id="search-btn" appActiveEffect></div>
-    <div class="fas fa-shopping-cart" id="cart-btn" appActiveEffect></div>
-    <div class="fas fa-user" id="login-btn" appActiveEffect></div>
+    <div class="fas fa-bars" id="menu-btn"></div>
+    <div class="fas fa-search" id="search-btn"></div>
+    <div class="fas fa-shopping-cart" id="cart-btn"></div>
+    <div class="fas fa-user" id="login-btn"></div>
   </div>
   <form class="search-form">
     <input
