--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -4,11 +4,13 @@
 </div>
 
 <section class="category">
-  <h1 class="title">our <span>category</span> <a href="#">view all >></a></h1>
+  <h1 class="title">
+    our <span>category</span> <a routerLink="/">view all >></a>
+  </h1>
 
   <div class="box-container">
     <a href="#" class="box">
-      <img src="../../assets/images/home/cart-3.jpg" alt="" />
+      <img src="../../assets/images/home/cat-3.png" alt="" />
       <h3>fresh fruits</h3>
     </a>
     <a href="#" class="box">
@@ -34,32 +36,38 @@
 </section>
 
 <section class="products">
-  <h1 class="title">our <span>products</span> <a href="#">view all >></a></h1>
+  <h1 class="title">
+    our <span>products</span> <a routerLink="/">view all >></a>
+  </h1>
 
   <div class="box-container">
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-1.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
+    <ng-container *ngFor="let product of products; let index = index">
+      <div class="box" [routerLink]="['/products', product.id]">
+        <div class="icons">
+          <a href="#" class="fas fa-shopping-cart"></a>
+          <a href="#" class="fas fa-heart"></a>
+          <a [routerLink]="['/products', product.id]" class="fas fa-eye"></a>
+        </div>
+        <div class="image">
+          <img src="../../assets/images/home/product-2.jpg" alt="" />
+        </div>
+        <div class="content">
+          <h3>{{ product.name }}</h3>
+          <div class="price">
+            {{ product.price | currency: "$":"symbol-narrow":"1.0-3" }}
+          </div>
+          <div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+          </div>
         </div>
       </div>
-    </div>
+    </ng-container>
 
-    <div class="box">
+    <!-- <div class="box">
       <div class="icons">
         <a href="#" class="fas fa-shopping-cart"></a>
         <a href="#" class="fas fa-heart"></a>
@@ -211,6 +219,6 @@
           <i class="far fa-star"></i>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
