--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -42,36 +42,64 @@
     <div class="card">
       <div class="card-header">
         <h3>Products</h3>
-        <button class="btn btn-expand" routerLink="/products">
+        <button class="btn btn-expand" routerLink="/admin/products">
           See all <i class="fa fa-arrow-right"></i>
         </button>
       </div>
       <div class="card-body">
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Price</th>
-              <th>Quantity</th>
-              <th>Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- <ng-container
-                  *ngFor="let product of products; let index = index"
-                >
-                  <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.price | currency: "USD" }}</td>
-                    <td>{{ product.quantity }}</td>
-                    <td>
-                      <span [class]="{ status: true }"></span>
-                      {{ product.status }}
-                    </td>
-                  </tr>
-                </ng-container> -->
-          </tbody>
-        </table>
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource">
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef>No.</th>
+              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            </ng-container>
+
+            <!-- Price Column -->
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef>Price</th>
+              <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+            </ng-container>
+
+            <!-- Quantity Column -->
+            <ng-container matColumnDef="quantity">
+              <th mat-header-cell *matHeaderCellDef>Quantity</th>
+              <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+            </ng-container>
+
+            <!-- Category Column -->
+            <ng-container matColumnDef="category">
+              <th mat-header-cell *matHeaderCellDef>Category</th>
+              <td mat-cell *matCellDef="let element">{{ element.category }}</td>
+            </ng-container>
+
+            <!-- Thumbnail Column -->
+            <ng-container matColumnDef="thumbnail">
+              <th mat-header-cell *matHeaderCellDef>Thumbnail</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.thumbnail }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+
+          <mat-paginator
+            [length]="productList?.length"
+            [pageSize]="10"
+            [pageSizeOptions]="[10, 20, 30]"
+            showFirstLastButtons
+            aria-label="Select page of periodic elements"
+          >
+          </mat-paginator>
+        </div>
       </div>
     </div>
   </div>
