--- a/src/app/sign-up/pages/sign-up.component.scss
+++ b/src/app/sign-up/pages/sign-up.component.scss
@@ -9,6 +9,7 @@
   background: $white;
   border-radius: 0.5rem;
   box-shadow: $box-shadow;
+  border: $border;
   width: 40rem;
   padding: 3rem;
   transition: right 0.4s linear;
