--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ body {
 :root {
   --color-main: #1a202e;
   // --main-color-seller: #dd2f6e;
-  --main-color-seller: #bac34e;
+  --main-color-seller: #142f43;
   --color-dark-seller: #1d2231;
   --text-grey-seller: #8390a2;
 
