--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -160,9 +160,16 @@ $width-sidebar: 260px;
         height: 50px;
         border-radius: 50%;
         margin-right: 1rem;
+        border: 1px solid rgba(#142f43, 0.4);
       }
       .info {
+        text-align: center;
+        h4 {
+          font-size: 1.8rem;
+          text-transform: capitalize;
+        }
         small {
+          font-size: 1rem;
           display: inline-block;
           color: var(--text-grey-seller);
         }
