--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,123 +1,5 @@
-<!-- Header -->
-<header class="header">
-  <a [routerLink]="['/']" class="logo"
-    ><i class="fas fa-shopping-basket"></i>groco</a
-  >
-  <nav class="navbar">
-    <a
-      class="navbar-link"
-      [routerLink]="['/']"
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true }"
-      >Home</a
-    >
-    <a class="navbar-link" [routerLink]="['/shop']" routerLinkActive="active"
-      >Shop</a
-    >
-    <a
-      class="navbar-link"
-      [routerLink]="['/about-us']"
-      routerLinkActive="active"
-      >About</a
-    >
-    <a class="navbar-link" [routerLink]="['/reviews']" routerLinkActive="active"
-      >Review</a
-    >
-    <a class="navbar-link" [routerLink]="['/blogs']" routerLinkActive="active"
-      >Blog</a
-    >
-  </nav>
-  <div class="icons">
-    <div class="fas fa-bars" id="menu-btn"></div>
-    <div class="fas fa-search" id="search-btn"></div>
-    <div class="fas fa-shopping-cart" id="cart-btn"></div>
-    <div class="fas fa-user" id="login-btn"></div>
-  </div>
-  <form class="search-form">
-    <input
-      type="search"
-      name="search"
-      id="search-box"
-      placeholder="Search..."
-    />
-    <label for="search-box" class="far fa-search"></label>
-  </form>
-  <div class="shopping-cart">
-    <div class="box">
-      <i class="fas fa-times"></i>
-      <img src="../../assets/images/home/cart-1.jpg" alt="image" />
-      <div class="content">
-        <h3>organic food</h3>
-        <span class="quantity">1</span>
-        <span class="multiply">x</span>
-        <span class="price">$18</span>
-      </div>
-    </div>
-    <h3 class="total">Total: <span>56.97</span></h3>
-    <a href="" class="btn">checkout cart</a>
-  </div>
-  <form class="login-form">
-    <h3>log in</h3>
-    <input type="text" placeholder="Enter username/ email ..." class="box" />
-    <input type="password" placeholder="Enter password ..." class="box" />
-    <div class="remember">
-      <input type="checkbox" name="remember-me" id="remember-me" />
-      <label for="remember-me">Remember me</label>
-    </div>
-    <button class="btn">Login</button>
-    <p>Forgot password? <a href="">Lấy lại mật khẩu</a></p>
-    <p>Don't have an account? <a href="">Sign up</a></p>
-  </form>
-</header>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
-<!-- Footer -->
-<footer class="footer">
-  <div class="box-container">
-    <div class="box">
-      <h3>quick links</h3>
-      <a class="navbar-link" href=""> <i class="fas fa-arrow-right"></i>Home</a>
-      <a class="navbar-link" href=""> <i class="fas fa-arrow-right"></i>Shop</a>
-      <a class="navbar-link" href="">
-        <i class="fas fa-arrow-right"></i>About</a
-      >
-      <a class="navbar-link" href="">
-        <i class="fas fa-arrow-right"></i>Review</a
-      >
-      <a class="navbar-link" href=""> <i class="fas fa-arrow-right"></i>Blog</a>
-      <a class="navbar-link" href="">
-        <i class="fas fa-arrow-right"></i>Contact</a
-      >
-    </div>
-    <div class="box">
-      <h3>extra links</h3>
-      <a href=""><i class="fas fa-arrow-right"></i>my order</a>
-      <a href=""><i class="fas fa-arrow-right"></i>my favorite</a>
-      <a href=""><i class="fas fa-arrow-right"></i>my wishlist</a>
-      <a href=""><i class="fas fa-arrow-right"></i>my account</a>
-      <a href=""><i class="fas fa-arrow-right"></i>terms or use</a>
-    </div>
-    <div class="box">
-      <h3>follow us</h3>
-      <a href=""><i class="fab fa-facebook"></i>Facebook</a>
-      <a href=""><i class="fab fa-twitter"></i>twitter</a>
-      <a href=""><i class="fab fa-instagram"></i>instagram</a>
-      <a href=""><i class="fab fa-linkedin"></i>linkedin</a>
-      <a href=""><i class="fab fa-pinterest"></i>priterest</a>
-    </div>
-    <div class="box">
-      <h3>newsletter</h3>
-      <p>subscribe for latest updates</p>
-      <form class="subscribe-form">
-        <input type="text" placeholder="Enter your email" />
-        <button class="btn">Subscribe</button>
-      </form>
-      <img
-        class="img-payment"
-        src="../../../../assets/images/home/payment.png"
-        alt="subscribe"
-      />
-    </div>
-  </div>
-</footer>
+<app-footer></app-footer>
