--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,224 +1,5 @@
-<div class="heading">
-  <h1>our shop</h1>
-  <p><a routerLink="/">home >> </a> shop</p>
-</div>
+<app-header></app-header>
 
-<section class="category">
-  <h1 class="title">
-    our <span>category</span> <a routerLink="/">view all >></a>
-  </h1>
+<router-outlet></router-outlet>
 
-  <div class="box-container">
-    <a href="#" class="box">
-      <img src="../../assets/images/home/cat-3.png" alt="" />
-      <h3>fresh fruits</h3>
-    </a>
-    <a href="#" class="box">
-      <img src="../../assets/images/home/cat-2.png" alt="" />
-      <h3>vegetables</h3>
-    </a>
-
-    <a href="#" class="box">
-      <img src="../../assets/images/home/cat-3.png" alt="" />
-      <h3>organic spices</h3>
-    </a>
-
-    <a href="#" class="box">
-      <img src="../../assets/images/home/cat-4.png" alt="" />
-      <h3>fresh meat</h3>
-    </a>
-
-    <a href="#" class="box">
-      <img src="../../assets/images/home/cat-5.png" alt="" />
-      <h3>organic wheat</h3>
-    </a>
-  </div>
-</section>
-
-<section class="products">
-  <h1 class="title">
-    our <span>products</span> <a routerLink="/">view all >></a>
-  </h1>
-
-  <div class="box-container">
-    <ng-container *ngFor="let product of products; let index = index">
-      <div class="box" [routerLink]="['/products', product.id]">
-        <div class="icons">
-          <a href="#" class="fas fa-shopping-cart"></a>
-          <a href="#" class="fas fa-heart"></a>
-          <a [routerLink]="['/products', product.id]" class="fas fa-eye"></a>
-        </div>
-        <div class="image">
-          <img src="../../assets/images/home/product-2.jpg" alt="" />
-        </div>
-        <div class="content">
-          <h3>{{ product.name }}</h3>
-          <div class="price">
-            {{ product.price | currency: "$":"symbol-narrow":"1.0-3" }}
-          </div>
-          <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-        </div>
-      </div>
-    </ng-container>
-
-    <!-- <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-2.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-3.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-4.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-5.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-6.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-7.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="icons">
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-eye"></a>
-      </div>
-      <div class="image">
-        <img src="../../assets/images/home/product-8.jpg" alt="" />
-      </div>
-      <div class="content">
-        <h3>organic food</h3>
-        <div class="price">$18.99</div>
-        <div class="stars">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="far fa-star"></i>
-        </div>
-      </div>
-    </div> -->
-  </div>
-</section>
+<app-footer></app-footer>
