--- a/src/app/sign-in/pages/sign-in.component.scss
+++ b/src/app/sign-in/pages/sign-in.component.scss
@@ -8,6 +8,7 @@
   background: $white;
   border-radius: 0.5rem;
   box-shadow: $box-shadow;
+  border: $border;
   width: 40rem;
   padding: 3rem;
   transition: right 0.4s linear;
