--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -23,9 +23,9 @@
         </a>
       </li>
       <li>
-        <a routerLink="/admin/users" [routerLinkActive]="'active'">
-          <i class="fa fa-users"></i>
-          <span>Users</span>
+        <a routerLink="/admin/categories" [routerLinkActive]="'active'">
+          <i class="fab fa-cuttlefish"></i>
+          <span>Category</span>
         </a>
       </li>
       <li>
