--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,71 @@
-<p>categories works!</p>
+<input type="checkbox" name="sidebar-toggle" id="sidebar-toggle" checked />
+
+<!-- Sidebar -->
+<div class="sidebar-seller">
+  <div class="sidebar-brand">
+    <label for="sidebar-toggle">
+      <h2>
+        <i class="fab fa-accusoft"></i>
+        <span>Accusoft</span>
+      </h2>
+    </label>
+  </div>
+  <div class="sidebar-menu">
+    <ul>
+      <li>
+        <a
+          routerLink="/admin/dashboard"
+          [routerLinkActive]="'active'"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <i class="fa fa-igloo"></i>
+          <span>Dashboard</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/admin/categories" [routerLinkActive]="'active'">
+          <i class="fab fa-cuttlefish"></i>
+          <span>Category</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/admin/products" [routerLinkActive]="'active'">
+          <i class="fab fa-product-hunt"></i>
+          <span>Products</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/admin/account" [routerLinkActive]="'active'">
+          <i class="fa fa-user-circle"></i>
+          <span>Account</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- Content -->
+<div class="main-content-seller">
+  <header>
+    <h2>
+      <label for="sidebar-toggle">
+        <span class="fa fa-bars"></span>
+      </label>
+      Dashboard
+    </h2>
+    <div class="search-wrapper">
+      <i class="fa fa-search"></i>
+      <input type="search" placeholder="Search here" />
+    </div>
+    <div class="user-wrapper">
+      <img src="../../../assets/images/admin/admin.jpg" alt="img" />
+      <div class="info">
+        <h4>John Doe</h4>
+        <small>Super admin</small>
+      </div>
+    </div>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
