--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <!-- About -->
 <div class="heading">
   <h1>about us</h1>
@@ -137,3 +139,5 @@
     ></iframe>
   </div>
 </section>
+
+<app-footer></app-footer>
