--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="heading">
   <h1>our blogs</h1>
   <p><a href="home.html">home >></a> blogs</p>
@@ -110,3 +112,5 @@
     </div>
   </div>
 </section>
+
+<app-footer></app-footer>
