--- a/src/app/categories/pages/add-category/add-category.component.html
+++ b/src/app/categories/pages/add-category/add-category.component.html
@@ -43,8 +43,6 @@
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button type="submit" [mat-dialog-close]="true" cdkFocusInitial>
-      Install
-    </button>
+    <button type="submit" class="btn" mat-button>Create</button>
   </mat-dialog-actions>
 </form>
