--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="heading">
   <h1>client's review</h1>
   <p><a href="home.html">home >></a> review</p>
@@ -120,3 +122,5 @@
     </p>
   </div>
 </section>
+
+<app-footer></app-footer>
