--- a/src/app/categories/pages/add-category/add-category.component.scss
+++ b/src/app/categories/pages/add-category/add-category.component.scss
@@ -37,8 +37,9 @@
     }
   }
   .btn {
-    margin: 1rem 0;
-    width: 100%;
+    margin: 0;
+    padding: 0 20px;
+    // width: 100%;
     text-align: center;
   }
   p {
