--- a/src/app/products/pages/delete-product/delete-product.component.html
+++ b/src/app/products/pages/delete-product/delete-product.component.html
@@ -1,1 +1,11 @@
-<p>delete-product works!</p>
+<h1 mat-dialog-title>Are you sure you want to delete?</h1>
+<div mat-dialog-actions [style.float]="'right'">
+  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button
+    mat-raised-button
+    color="warn"
+    (click)="onDeleteProduct(data.idProduct)"
+  >
+    Delete
+  </button>
+</div>
