--- a/src/app/products/pages/product-list/product-list.component.scss
+++ b/src/app/products/pages/product-list/product-list.component.scss
@@ -15,6 +15,8 @@ table {
   float: right;
   margin: 10px 12px 10px 0;
 }
-.form-add-product {
-  display: none;
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+  padding: 0 20px;
 }
