--- a/src/app/products/pages/update-product/update-product.component.html
+++ b/src/app/products/pages/update-product/update-product.component.html
@@ -40,17 +40,15 @@
     />
   </mat-form-field>
 
-  <!-- <mat-form-field class="form-field" appearance="outline">
-    <mat-label>Thumbnail</mat-label>
-    <input
-      type="text"
-      matInput
-      placeholder=" "
-      class="form-input"
-      formControlName="thumbnail"
-      [(ngModel)]="product.thumbnail"
-    />
-  </mat-form-field> -->
+  <mat-form-field class="form-field" appearance="outline">
+    <mat-label>Category - {{ product.category }}</mat-label>
+    <mat-select formControlName="category" [(ngModel)]="product.category">
+      <ng-container *ngFor="let category of categories">
+        <mat-option [value]="category.code">{{ category.name }}</mat-option>
+      </ng-container>
+      <!-- <mat-option value="two">Second option</mat-option> -->
+    </mat-select>
+  </mat-form-field>
 
   <div class="form-field input-radio" placeholder=" ">
     <label>Status </label>
