--- a/src/app/shared/home-layout/header/header.component.scss
+++ b/src/app/shared/home-layout/header/header.component.scss
@@ -37,6 +37,9 @@
     }
   }
   .icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     div {
       font-size: 1.6rem;
       margin-left: 1.4rem;
@@ -44,6 +47,118 @@
       color: $light-color;
       &:hover {
         color: $green;
+      }
+    }
+    .user-profile {
+      position: relative;
+      margin-left: -1.4px;
+      &:before {
+        position: absolute;
+        content: "";
+        top: 100%;
+        right: -50%;
+        width: 240px;
+        height: 40px;
+        background: transparent;
+      }
+      &:hover {
+        .menu {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+      .profile {
+        width: 40px;
+        height: 32px;
+        border-radius: 10px;
+        border: $border;
+        border-width: 2px;
+        overflow: hidden;
+        cursor: pointer;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .menu {
+        position: absolute;
+        top: 150%;
+        right: -50%;
+        padding: 10px 20px;
+        background: #fff;
+        width: 240px;
+        border: $border;
+        border-radius: 15px;
+        box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1);
+        transition: 0.4s;
+
+        visibility: hidden;
+        opacity: 0;
+        &:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 4px;
+          width: 190px;
+          height: 20px;
+          border-radius: 15px;
+          background: #fff;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: -3.44rem;
+          right: 18px;
+          border-width: 20px 20px;
+          border-style: solid;
+          border-color: transparent transparent transparent rgba(#000, 0.1);
+          transform: rotate(-90deg);
+        }
+        h3 {
+          width: 100%;
+          text-align: center;
+          font-size: 18px;
+          font-weight: 500;
+          color: #555;
+          padding: 20px 0;
+          line-height: 1.2em;
+          span {
+            font-size: 14px;
+            color: #cecece;
+            font-weight: 400;
+          }
+        }
+        ul {
+          li {
+            padding: 10px 0;
+            border-top: 1px solid $green;
+            a {
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+
+              text-decoration: none;
+              color: #555;
+              font-weight: 500;
+              transition: all 0.2s;
+              &:hover {
+                color: $green;
+                i {
+                  opacity: 1;
+                }
+              }
+              i {
+                width: 3.6rem;
+                max-width: 100%;
+                font-size: 3rem;
+                margin-right: 1rem;
+                opacity: 0.5;
+                transition: all 0.2s;
+              }
+            }
+          }
+        }
       }
     }
   }
