--- a/src/app/shop/pages/category-detail/category-detail.component.html
+++ b/src/app/shop/pages/category-detail/category-detail.component.html
@@ -12,7 +12,10 @@
     <ng-container *ngFor="let product of products; let index = index">
       <div class="box">
         <div class="icons">
-          <a href="#" class="fas fa-shopping-cart"></a>
+          <a
+            class="fas fa-shopping-cart"
+            (click)="onAddProductToCart(product, 1)"
+          ></a>
           <a href="#" class="fas fa-heart"></a>
           <a
             [routerLink]="['/shop/products', product.id]"
