--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -2,6 +2,7 @@ $green: #bac34e;
 $black: #222;
 $white: #fff;
 $light-color: #666;
+$red-color: #dd2222;
 $light-bg: #f3f3f3;
 $border: 1px solid rgba(0, 0, 0, 0.1);
 $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
